--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -5,7 +5,7 @@ on: push
 jobs:
   super-lint:
     name: Lint code base
-    run-on: ubuntu-lastest
+    runs-on: ubuntu-lastest
     steps:
       - name: Checkout code
         uses: action/checkout@v2
