--- a/.github/workflows/superlinter.yml
+++ b/.github/workflows/superlinter.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: self-hosted
     steps:
       - name: Set up Go 1.13
-        uses: action/setup-go@v1
+        uses: actions/setup-go@v1
         with:
           go-version: 1.13
         id: go
